# pgsalesgen

./: Makefile  README.md  pgsalesgen.rb  pyproject.toml
Formula/: pgsalesgen.rb
