[project]
name = "pgsalesgen"
authors = [
    { name = "Rio Fujita", email = "rifujita@microsoft.com" }
]
version = "0.1.4"
license = {file = "LICENSE"}
description = "Generate sales data for PostgreSQL"
readme = "README.md"

requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3",
    "psycopg>=3.3.3",
]

[project.optional-dependencies]
test = [
  "pytest>=9",
  "pytest-cov>=7",
]

[project.urls]
Homepage = "https://github.com/rioriost/pgsalesgen"
Issues = "https://github.com/rioriost/pgsalesgen/issues"

[project.scripts]
pgsalesgen = "pgsalesgen.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pgsalesgen"]

[tool.hatch.build.targets.sdist]
include = [
  "src/pgsalesgen/*.py",
  "*.py",
]
exclude = [
  "pgsalesgen.rb",
  "uv.lock",
  "dist/.DS_Store",
  ".envrc",
]
