[project]
name = "pgsalesgen"
version = "0.1.4"
description = "Generate sales data for PostgreSQL"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Rio Fujita", email = "rifujita@microsoft.com" },
]
dependencies = [
  "numpy>=2.4.3",
  "psycopg>=3.3.3",
]

[project.urls]
Homepage = "https://github.com/rioriost/pgsalesgen"
Issues = "https://github.com/rioriost/pgsalesgen/issues"
Repository = "https://github.com/rioriost/pgsalesgen"

[project.scripts]
pgsalesgen = "pgsalesgen.main:main"

[project.optional-dependencies]
test = [
  "pytest>=9",
  "pytest-cov>=7",
]

[dependency-groups]
dev = [
  "build>=1.2.2",
  "twine>=6.1.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
